syntax = "proto3";

package backend;
option go_package = "panelium/proto_gen_go/backend";

import "common.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (common.SuccessMessage) {} // COOKIES: access_jwt, refresh_jwt (if register success)

  rpc Login(LoginRequest) returns (LoginResponse) {}

  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {}
  rpc ChangePasswordRequestMFACode(RequestMFACodeRequest) returns (common.SuccessMessage) {}
  rpc ChangePasswordVerifyMFA(VerifyMFARequest) returns (VerifyMFAResponse) {}

  rpc RequestPasswordReset(RequestPasswordResetRequest) returns (common.SuccessMessage) {} // THIS SHOULD NOT INDICATE WHETHER THE EMAIL EXISTS, JUST WHETHER THE REQUEST WAS PROCESSED
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse) {}
  rpc ResetPasswordRequestMFACode(RequestMFACodeRequest) returns (common.SuccessMessage) {}
  rpc ResetPasswordVerifyMFA(VerifyMFARequest) returns (VerifyMFAResponse) {}

  rpc RequestMFACode(RequestMFACodeRequest) returns (common.SuccessMessage) {}
  rpc VerifyMFA(VerifyMFARequest) returns (VerifyMFAResponse) {}

  rpc RefreshToken(common.Empty) returns (common.SuccessMessage) {} // REQUEST COOKIES: refresh_jwt | COOKIES: (ROTATE) access_jwt, (ROTATE) refresh_jwt (if refresh token valid)

  rpc Logout(common.Empty) returns (common.SuccessMessage) {} // REQUEST COOKIES: access_jwt | COOKIES: (CLEAR+INVALIDATE) access_jwt, (CLEAR+INVALIDATE) refresh_jwt (if access token valid)
}

enum MFAType {
  MFA_TYPE_UNSPECIFIED = 0;
  MFA_TYPE_TOTP = 1;
  MFA_TYPE_SMS = 2;
  MFA_TYPE_EMAIL = 3;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  /* COOKIES
  access_jwt (if auth success and mfa not required)
  refresh_jwt (if auth success and mfa not required)

  mfa_jwt (if auth success and mfa required)
  */
  bool success = 1;
  bool requires_mfa = 2;
  repeated MFAType mfa_types_available = 3; // (optional) types of MFA available for the user
}

message ChangePasswordRequest {
  /* REQUEST COOKIES
  access_jwt
  refresh_jwt - high security change, requires refresh token validation
  */
  string old_password = 1;
  string new_password = 2;
}

message ChangePasswordResponse {
  /* COOKIES
  (ROTATE) access_jwt (if change password success)
  (ROTATE) refresh_jwt (if change password success)

  mfa_jwt (if change password success but additional MFA required)
  */
  bool success = 1;
  bool requires_mfa = 2;
  repeated MFAType mfa_types_available = 3; // (optional) types of MFA available for the user
}

message RequestPasswordResetRequest {
  string email = 1; // email to send the reset link to
}

message ResetPasswordRequest {
  /* REQUEST COOKIES
  reset_jwt
  */
  string new_password = 1;
}

message ResetPasswordResponse {
  /* COOKIES
  (CLEAR) access_jwt (if reset password success)
  (CLEAR) refresh_jwt (if reset password success)

  (CLEAR+INVALIDATE) reset_jwt (if reset password success)
  mfa_jwt (if reset password success but additional MFA required)
  */
  bool success = 1;
  bool requires_mfa = 2;
  repeated MFAType mfa_types_available = 3; // (optional) types of MFA available for the user
}

message RequestMFACodeRequest {// only for MFA types that require the backend to send a code (e.g. SMS, Email)
  /* REQUEST COOKIES
  mfa_jwt
  */
  MFAType mfa_type = 2; // type of MFA to use
}

message VerifyMFARequest {
  /* REQUEST COOKIES
  mfa_jwt
  */
  string mfa_code = 1;
}

message VerifyMFAResponse {
  /* COOKIES
  access_jwt (if auth and MFA success and no additional MFA required)
  refresh_jwt (if auth and MFA success and no additional MFA required)

  (ROTATE) mfa_jwt (if auth and MFA success but additional MFA required)

  (CLEAR) mfa_jwt (if auth and MFA success and no additional MFA required)
  (CLEAR+INVALIDATE) reset_jwt (if auth and MFA success and no additional MFA required)
  */
  bool success = 1;
  bool requires_additional_mfa = 2;
  repeated MFAType mfa_types_available = 3;
}
